--- a/src/main/java/lapr4/green/s1/ipc/n1970581/findworkbook/ui/SearchWorkbookPanel.form
+++ b/src/main/java/lapr4/green/s1/ipc/n1970581/findworkbook/ui/SearchWorkbookPanel.form
@@ -100,6 +100,9 @@
         <Property name="text" type="java.lang.String" value="Open"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonOpenActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
@@ -114,6 +117,9 @@
               <Connection code="new DefaultListModel&lt;FileDTO&gt;()" type="code"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jListWorkbooksMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
