--- a/src/main/java/lapr4/red/s1/core/n1140376/comments/ui/CommentsPanel.form
+++ b/src/main/java/lapr4/red/s1/core/n1140376/comments/ui/CommentsPanel.form
@@ -26,7 +26,7 @@
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jTextField1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="421" max="32767" attributes="0"/>
+              <EmptySpace pref="421" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
