--- a/src/main/java/lapr4/green/s1/ipc/n1140618/ChatApplication/ui/ChatPanel.form
+++ b/src/main/java/lapr4/green/s1/ipc/n1140618/ChatApplication/ui/ChatPanel.form
@@ -62,14 +62,11 @@
       <SubComponents>
         <Component class="javax.swing.JList" name="jList1">
           <Properties>
-            <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new DefaultListModel&lt;InetAddress&gt;()" type="code"/>
-            </Property>
             <Property name="selectionMode" type="int" value="0"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;InetAddress&gt;"/>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
       </SubComponents>
