--- a/src/main/java/lapr4/green/s1/ipc/n1130626/importexporttext/ui/ImportUI.form
+++ b/src/main/java/lapr4/green/s1/ipc/n1130626/importexporttext/ui/ImportUI.form
@@ -27,11 +27,8 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                          <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
@@ -39,7 +36,6 @@
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="btnFindTextFile" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="textSpecialChar" min="-2" pref="31" max="-2" attributes="0"/>
                               <Component id="checkHeader" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -83,19 +79,14 @@
                   <Component id="nameTextFile" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
                   <Component id="btnFindTextFile" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="textSpecialChar" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
               <Component id="checkHeader" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnImport" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnCancel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="12" max="32767" attributes="0"/>
+              <EmptySpace pref="20" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -133,13 +124,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFindTextFileActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="jLabel5">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Special character:"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="textSpecialChar">
     </Component>
     <Component class="javax.swing.JCheckBox" name="checkHeader">
       <Properties>
