#LAPR4E17DL-163 #comment Design update #time 1h

--- a/src/main/java/lapr4/green/s2/core/n1130626/insertimage/ui/ImagesPanel.form
+++ b/src/main/java/lapr4/green/s2/core/n1130626/insertimage/ui/ImagesPanel.form
@@ -111,7 +111,7 @@
     <Container class="javax.swing.JPanel" name="jPanelImageView">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="33" red="33" type="rgb"/>
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
       </Properties>
 
